consistifyapp/build_err.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
E:\consitify\consistifyapp\app\src\main\java\com\example\consistify_app\TrackFragment.java:264: error: cannot find symbol
            currentStepsWalked++;
            ^
  symbol:   variable currentStepsWalked
  location: class TrackFragment
E:\consitify\consistifyapp\app\src\main\java\com\example\consistify_app\TrackFragment.java:265: error: cannot find symbol
        } else if (event.sensor.getType() == Sensor.TYPE_LINEAR_ACCELERATION && stepEngine != null) {
                                                                                ^
  symbol:   variable stepEngine
  location: class TrackFragment
E:\consitify\consistifyapp\app\src\main\java\com\example\consistify_app\TrackFragment.java:266: error: cannot find symbol
            stepEngine.onSensorChanged(event);
            ^
  symbol:   variable stepEngine
  location: class TrackFragment
3 errors

> Task :app:compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 5s
15 actionable tasks: 1 executed, 14 up-to-date
